--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@types/node": "20.14.12",
+        "@types/react": "18.3.3",
         "eslint": "^8.43.0",
         "eslint-config-next": "^13.4.7"
     }
