--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "license": "MIT",
     "dependencies": {
         "@netlify/functions": "^1.6.0",
+        "dotenv": "^16.4.5",
         "next": "^13.4.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
